# Smart-Contracts

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  package.json  test.sh
.github/workflows/: rust.yaml  rust.yml
contracts/lending/: Cargo.toml  package-lock.json
contracts/lending/scripts/: contract-optimize.bat
contracts/lending/scripts/js/: test.js
contracts/lending/scripts_bat/: contract-deploy-optimized.bat  contract-get-price.bat  contract-init.bat  contract-update-price.bat  token-mintA.bat
contracts/lending/scripts_bat/js/: test.js
contracts/lending/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs  utilities.rs
contracts/margin_positions/: Cargo.toml
contracts/margin_positions/src/: contract.rs  lib.rs  storage.rs  test.rs  utilities.rs
contracts/scripts/scripts_sh/: contract-deploy-optimized.sh  contract-optimize.sh
contracts/scripts_sh/: contract-get-price.sh  contract-init.sh  contract-update-price.sh  lending.optimized.wasm
contracts/vault_contract/: Cargo.toml
contracts/vault_contract/src/: contract.rs  lib.rs  storage.rs  utilities.rs
faucet/: Cargo.toml
faucet/src/: lib.rs  test.rs
scripts/: contract-borrow.bat  contract-build.bat  contract-bump-hash.bat  contract-bump.bat  contract-deposit.bat  contract-faucet.bat  contract-get-price.bat  contract-init.bat  contract-optimize.bat  contract-update-price.bat  faucet-deploy-optimized.bat  faucet-request.bat  token-mintB.bat
scripts/bump/: contract-extend.bat  contract-hash-bump.bat  faucet-extend.bat  faucet-hash-bump.bat  tokens-bump.bat  tokens-hash-bump.bat
scripts/js/: get-expiration.js  test-init.js  test.js
scripts/new_tokens/: init-eth.bat  init-usdc.bat  mint-eth.bat  mint-usdc.bat  new_tokens.txt  token-deploy.bat
scripts/restore/: contract-hash-restore.bat  contract-restore.bat  faucet-hash-restore.bat  faucet-restore.bat
src/: lib.rs  test.rs  types.rs
token/: soroban_token_contract.optimized.wasm
