[package]
name = "soroban-lending"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# [patch.crates-io]
# rust_decimal = { path = 'C:/Zpoken/blockchain/Soroban/rust-decimal' }

[features]
testutils = ["soroban-sdk/testutils"]
# maths = ["rust_decimal/maths"]

[dependencies]
soroban-sdk = "20.0.0-rc2"
rust_decimal = { version = "1.32", default-features = false, features = ["maths"]  }
rust_decimal_macros = "1.32"
linked_list_allocator = "0.10.5"

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }
rust_decimal = { version = "1.32", default-features = false, features = ["maths"]  }
rust_decimal_macros = "1.32"
linked_list_allocator = "0.10.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true