[workspace]
resolver = "2"
members = [
    "contracts/lending",
    "contracts/margin_positions",
    "contracts/vault_contract",
]

[workspace.dependencies]
soroban-sdk = "20.0.0-rc2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true