[package]
name = "margin_positions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0-rc2"
rust_decimal = { git = "https://github.com/AssetDesk/rust-decimal.git", default-features = false, features = ["maths"] }

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }
rust_decimal = { git = "https://github.com/AssetDesk/rust-decimal.git", default-features = false, features = ["maths"] }

[features]
testutils = ["soroban-sdk/testutils"]
